--- a/.env
+++ b/.env
@@ -2,3 +2,4 @@ DATABASE_URL=postgres://postgres.wpjxbugdobknepwnqlfe:Blog_pass32$$@aws-0-us-wes
 CLOUDINARY_CLOUD_NAME=dkn5hybho
 CLOUDINARY_API_KEY=957682436378788
 CLOUDINARY_API_SECRET=Du6FXdVx_yE7B1bVsEqZ-IgoWY4
+JWT_SECRET=hola
